--- a/index.html
+++ b/index.html
@@ -2,70 +2,46 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Redirecting to Telegram…</title>
+<title>MovieZone – Opening Telegram</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<!-- No Cache -->
+<!-- NO CACHE -->
 <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
 <meta http-equiv="Pragma" content="no-cache">
 <meta http-equiv="Expires" content="0">
 
 <style>
 body{
-  margin:0;
-  height:100vh;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  background:#0b1f18;
-  font-family:Segoe UI,Arial,sans-serif;
+  margin:0;height:100vh;
+  display:flex;justify-content:center;align-items:center;
+  background:#0b1f18;font-family:Segoe UI,Arial,sans-serif;
   color:#e8fff4;
 }
-
 .card{
-  text-align:center;
-  padding:30px 24px;
-  background:#0f2a22;
-  border-radius:22px;
-  box-shadow:0 20px 50px rgba(0,0,0,.6);
-  max-width:360px;
-  width:90%;
+  width:90%;max-width:360px;text-align:center;
+  padding:28px 22px;background:#0f2a22;
+  border-radius:22px;box-shadow:0 20px 50px rgba(0,0,0,.6);
 }
-
-h1{
-  margin:0 0 10px;
-  font-size:26px;
-  color:#00E676;
-}
-
-p{
-  font-size:14px;
-  color:#7ed9b2;
-  margin-bottom:18px;
-}
-
+h1{margin:0 0 6px;font-size:26px;color:#00E676}
+p{font-size:14px;color:#7ed9b2;margin-bottom:12px}
+.count{font-size:22px;font-weight:800;color:#00E676;margin-bottom:10px}
 .loader{
-  width:36px;
-  height:36px;
+  width:34px;height:34px;margin:0 auto 16px;
   border:4px solid rgba(0,230,118,.2);
-  border-top:4px solid #00E676;
-  border-radius:50%;
-  margin:0 auto 20px;
+  border-top:4px solid #00E676;border-radius:50%;
   animation:spin 1s linear infinite;
 }
-
-@keyframes spin{
-  to{transform:rotate(360deg)}
-}
-
+@keyframes spin{to{transform:rotate(360deg)}}
 .btn{
-  display:inline-block;
-  padding:14px 18px;
-  border-radius:18px;
+  display:inline-block;padding:14px 18px;border-radius:18px;
   background:linear-gradient(135deg,#00E676,#00C853);
-  color:#003820;
-  font-weight:800;
-  text-decoration:none;
+  color:#003820;font-weight:800;text-decoration:none;
+}
+.small{margin-top:10px;font-size:12px;color:#6bbf9b}
+.hits{
+  margin-top:8px;
+  font-size:12px;
+  color:#9be6c8;
 }
 </style>
 </head>
@@ -73,20 +49,55 @@ p{
 <body>
 
 <div class="card">
-  <h1>Opening Telegram…</h1>
-  <p>Please wait while we redirect you</p>
+  <h1>MovieZone</h1>
+  <p>Preparing Telegram access…</p>
 
+  <div class="count" id="count">3</div>
   <div class="loader"></div>
 
-  <a class="btn" href="https://telegram.me/EliteHubCommunity">
+  <a class="btn" href="https://t.me/+6GA9gpY_JvoxMjI1">
     Open Telegram Manually
   </a>
+
+  <div class="hits">
+    👁️ Total Visits: <span id="hits">—</span>
+  </div>
+
+  <div class="small">Redirecting automatically</div>
 </div>
 
 <script>
-setTimeout(function(){
-  window.location.href = "https://telegram.me/EliteHubCommunity";
-},1500);
+/* TELEGRAM LINKS */
+const TG_HTTP = "https://t.me/+6GA9gpY_JvoxMjI1";
+const TG_DEEP  = "tg://join?invite=6GA9gpY_JvoxMjI1";
+
+/* 🔢 REAL VISITOR COUNTER (CountAPI) */
+const NAMESPACE = "moviezone-redirect";
+const KEY = "visits";
+
+fetch(`https://api.countapi.xyz/hit/${NAMESPACE}/${KEY}`)
+  .then(res => res.json())
+  .then(data => {
+    document.getElementById("hits").textContent = data.value;
+  })
+  .catch(()=>{
+    document.getElementById("hits").textContent = "—";
+  });
+
+/* COUNTDOWN */
+let c = 3;
+const el = document.getElementById("count");
+const t = setInterval(()=>{
+  c--;
+  el.textContent = c;
+  if(c === 0){
+    clearInterval(t);
+    // Try Telegram app
+    window.location.href = TG_DEEP;
+    // Fallback
+    setTimeout(()=>{ window.location.href = TG_HTTP; },1000);
+  }
+},1000);
 </script>
 
 </body>
