--- a/index.html
+++ b/index.html
@@ -5,44 +5,43 @@
 <title>MovieZone – Opening Telegram</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<!-- NO CACHE -->
+<!-- No Cache -->
 <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
 <meta http-equiv="Pragma" content="no-cache">
 <meta http-equiv="Expires" content="0">
 
 <style>
+*{box-sizing:border-box;font-family:Segoe UI,Arial,sans-serif}
 body{
-  margin:0;height:100vh;
-  display:flex;justify-content:center;align-items:center;
-  background:#0b1f18;font-family:Segoe UI,Arial,sans-serif;
-  color:#e8fff4;
+  margin:0;min-height:100vh;
+  display:flex;align-items:center;justify-content:center;
+  background:#081612;color:#e8fff4;
 }
 .card{
-  width:90%;max-width:360px;text-align:center;
-  padding:28px 22px;background:#0f2a22;
-  border-radius:22px;box-shadow:0 20px 50px rgba(0,0,0,.6);
+  width:92%;max-width:420px;
+  background:linear-gradient(180deg,#0b1f18,#081612);
+  border-radius:22px;
+  padding:26px;text-align:center;
+  box-shadow:0 25px 60px rgba(0,0,0,.6);
 }
-h1{margin:0 0 6px;font-size:26px;color:#00E676}
-p{font-size:14px;color:#7ed9b2;margin-bottom:12px}
-.count{font-size:22px;font-weight:800;color:#00E676;margin-bottom:10px}
+h1{margin:6px 0;font-size:30px;color:#00E676}
+.sub{font-size:14px;color:#7ed9b2;margin-bottom:16px}
+.count{font-size:28px;font-weight:900;color:#00E676}
 .loader{
-  width:34px;height:34px;margin:0 auto 16px;
-  border:4px solid rgba(0,230,118,.2);
-  border-top:4px solid #00E676;border-radius:50%;
+  width:52px;height:52px;margin:14px auto;
+  border:5px solid rgba(0,230,118,.25);
+  border-top-color:#00E676;border-radius:50%;
   animation:spin 1s linear infinite;
 }
 @keyframes spin{to{transform:rotate(360deg)}}
 .btn{
-  display:inline-block;padding:14px 18px;border-radius:18px;
+  display:block;width:100%;
+  padding:16px;border-radius:18px;
   background:linear-gradient(135deg,#00E676,#00C853);
-  color:#003820;font-weight:800;text-decoration:none;
+  color:#003820;font-size:18px;font-weight:900;
+  text-decoration:none;margin-top:12px;
 }
-.small{margin-top:10px;font-size:12px;color:#6bbf9b}
-.hits{
-  margin-top:8px;
-  font-size:12px;
-  color:#9be6c8;
-}
+.note{font-size:12px;color:#6bbf9b;margin-top:8px}
 </style>
 </head>
 
@@ -50,7 +49,7 @@ p{font-size:14px;color:#7ed9b2;margin-bottom:12px}
 
 <div class="card">
   <h1>MovieZone</h1>
-  <p>Preparing Telegram access…</p>
+  <div class="sub">Preparing Telegram access…</div>
 
   <div class="count" id="count">3</div>
   <div class="loader"></div>
@@ -59,42 +58,22 @@ p{font-size:14px;color:#7ed9b2;margin-bottom:12px}
     Open Telegram Manually
   </a>
 
-  <div class="hits">
-    👁️ Total Visits: <span id="hits">—</span>
-  </div>
-
-  <div class="small">Redirecting automatically</div>
+  <div class="note">Redirecting automatically</div>
 </div>
 
 <script>
-/* TELEGRAM LINKS */
 const TG_HTTP = "https://t.me/+6GA9gpY_JvoxMjI1";
 const TG_DEEP  = "tg://join?invite=6GA9gpY_JvoxMjI1";
 
-/* 🔢 REAL VISITOR COUNTER (CountAPI) */
-const NAMESPACE = "moviezone-redirect";
-const KEY = "visits";
-
-fetch(`https://api.countapi.xyz/hit/${NAMESPACE}/${KEY}`)
-  .then(res => res.json())
-  .then(data => {
-    document.getElementById("hits").textContent = data.value;
-  })
-  .catch(()=>{
-    document.getElementById("hits").textContent = "—";
-  });
-
-/* COUNTDOWN */
+/* Countdown */
 let c = 3;
 const el = document.getElementById("count");
-const t = setInterval(()=>{
+const timer = setInterval(()=>{
   c--;
   el.textContent = c;
   if(c === 0){
-    clearInterval(t);
-    // Try Telegram app
+    clearInterval(timer);
     window.location.href = TG_DEEP;
-    // Fallback
     setTimeout(()=>{ window.location.href = TG_HTTP; },1000);
   }
 },1000);
