--- a/index.html
+++ b/index.html
@@ -2,81 +2,22 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>MovieZone – Opening Telegram</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<!-- No Cache -->
 <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
 <meta http-equiv="Pragma" content="no-cache">
 <meta http-equiv="Expires" content="0">
 
-<style>
-*{box-sizing:border-box;font-family:Segoe UI,Arial,sans-serif}
-body{
-  margin:0;min-height:100vh;
-  display:flex;align-items:center;justify-content:center;
-  background:#081612;color:#e8fff4;
-}
-.card{
-  width:92%;max-width:420px;
-  background:linear-gradient(180deg,#0b1f18,#081612);
-  border-radius:22px;
-  padding:26px;text-align:center;
-  box-shadow:0 25px 60px rgba(0,0,0,.6);
-}
-h1{margin:6px 0;font-size:30px;color:#00E676}
-.sub{font-size:14px;color:#7ed9b2;margin-bottom:16px}
-.count{font-size:28px;font-weight:900;color:#00E676}
-.loader{
-  width:52px;height:52px;margin:14px auto;
-  border:5px solid rgba(0,230,118,.25);
-  border-top-color:#00E676;border-radius:50%;
-  animation:spin 1s linear infinite;
-}
-@keyframes spin{to{transform:rotate(360deg)}}
-.btn{
-  display:block;width:100%;
-  padding:16px;border-radius:18px;
-  background:linear-gradient(135deg,#00E676,#00C853);
-  color:#003820;font-size:18px;font-weight:900;
-  text-decoration:none;margin-top:12px;
-}
-.note{font-size:12px;color:#6bbf9b;margin-top:8px}
-</style>
+<title>Redirecting…</title>
 </head>
 
 <body>
 
-<div class="card">
-  <h1>MovieZone</h1>
-  <div class="sub">Preparing Telegram access…</div>
-
-  <div class="count" id="count">3</div>
-  <div class="loader"></div>
-
-  <a class="btn" href="https://t.me/+6GA9gpY_JvoxMjI1">
-    Open Telegram Manually
-  </a>
-
-  <div class="note">Redirecting automatically</div>
-</div>
-
 <script>
-const TG_HTTP = "https://t.me/+6GA9gpY_JvoxMjI1";
-const TG_DEEP  = "tg://join?invite=6GA9gpY_JvoxMjI1";
-
-/* Countdown */
-let c = 3;
-const el = document.getElementById("count");
-const timer = setInterval(()=>{
-  c--;
-  el.textContent = c;
-  if(c === 0){
-    clearInterval(timer);
-    window.location.href = TG_DEEP;
-    setTimeout(()=>{ window.location.href = TG_HTTP; },1000);
-  }
-},1000);
+location.replace("tg://join?invite=6GA9gpY_JvoxMjI1");
+setTimeout(function () {
+  location.replace("https://t.me/+6GA9gpY_JvoxMjI1");
+}, 80);
 </script>
 
 </body>
