--- a/index.html
+++ b/index.html
@@ -1,24 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
-<meta http-equiv="Pragma" content="no-cache">
-<meta http-equiv="Expires" content="0">
-
-<title>Redirecting…</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Open Telegram</title>
+  <style>
+    body {font-family: Arial, sans-serif; text-align:center; padding:40px;}
+    a.btn {
+      display:inline-block; padding:14px 22px; font-size:16px;
+      background:#229ED9; color:#fff; text-decoration:none; border-radius:6px;
+    }
+  </style>
 </head>
-
 <body>
-
-<script>
-location.replace("tg://join?invite=6GA9gpY_JvoxMjI1");
-setTimeout(function () {
-  location.replace("https://t.me/+6GA9gpY_JvoxMjI1");
-}, 80);
-</script>
-
+  <h3>Open in Telegram</h3>
+  <p>Tap the button to continue</p>
+  <a class="btn" href="https://telegram.me/+71mgtnul_QRjNjNl">Open Telegram</a>
 </body>
 </html>
